--- a/immich/config/backup/database.env
+++ b/immich/config/backup/database.env
@@ -1,3 +1,5 @@
+BACKUP_FILENAME=immich_database_%Y%m%d.{{ .Extension }}
+AWS_S3_PATH=$2_PATH/database
 BACKUP_SOURCES=/backup/database
 BACKUP_ARCHIVE=/archive/database
 EXEC_LABEL=immich_database
