--- a/immich/config/backup/library.env
+++ b/immich/config/backup/library.env
@@ -1,3 +1,4 @@
+BACKUP_FILENAME=immich_library_%Y%m%d.{{ .Extension }}
 AWS_S3_BUCKET_NAME=
 BACKUP_SOURCES=/backup/library
 BACKUP_ARCHIVE=/archive/library
