--- a/paperless/config/backup/database.env
+++ b/paperless/config/backup/database.env
@@ -1,3 +1,4 @@
+BACKUP_FILENAME=paperless_database_%Y%m%d.{{ .Extension }}
 AWS_S3_PATH=$R2_PATH/database
 BACKUP_SOURCES=/backup/database
 BACKUP_ARCHIVE=/archive/database
