--- a/paperless/config/backup/media.env
+++ b/paperless/config/backup/media.env
@@ -1,3 +1,4 @@
+BACKUP_FILENAME=paperless_media_%Y%m%d.{{ .Extension }}
 AWS_S3_PATH=$R2_PATH/media
 BACKUP_SOURCES=/backup/media
 BACKUP_ARCHIVE=/archive/media
