--- a/speedtest-tracker/compose.yml
+++ b/speedtest-tracker/compose.yml
@@ -43,8 +43,8 @@ services:
     image: docker.io/offen/docker-volume-backup:v2.43.4@sha256:bdb9b5dffee440a7d21b1b210cd704fd1696a2c29d7cbc6f0f3b13b77264a26a
     environment:
       BACKUP_CRON_EXPRESSION: 0 5 * * *
-      BACKUP_FILENAME: speedtest-tracker_%Y%m%d.{{ .Extension }}
-      AWS_S3_PATH: $R2_PATH
+      BACKUP_FILENAME: speedtest-tracker_database_%Y%m%d.{{ .Extension }}
+      AWS_S3_PATH: $R2_PATH/database
       BACKUP_SOURCES: &backup_database_source /backup/database
       BACKUP_ARCHIVE: &backup_database_archive /archive/database
       BACKUP_RETENTION_DAYS: 14
