--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - "**/compose.yml"
-      - "**/config/"
+      - "**/config/**"
       - .github/workflows/deploy.yml
       - .env.tmpl
 
