--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       compose: ${{ steps.detect.outputs.compose }}
 
     steps:
-      - name: 🚚 Checkout Repository
+      - name: 🚚 Check out repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
@@ -36,7 +36,7 @@ jobs:
     timeout-minutes: 1
 
     steps:
-      - name: 🛣️ Setup Tailscale
+      - name: 🛣️ Set up Tailscale
         uses: tailscale/github-action@84a3f23bb4d843bcf4da6cf824ec1be473daf4de # v3.2.3
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
@@ -67,7 +67,7 @@ jobs:
         compose: ${{ fromJson(needs.detect.outputs.compose) }}
 
     steps:
-      - name: 🛣️ Setup Tailscale
+      - name: 🛣️ Set up Tailscale
         uses: tailscale/github-action@84a3f23bb4d843bcf4da6cf824ec1be473daf4de # v3.2.3
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
@@ -92,7 +92,7 @@ jobs:
     timeout-minutes: 1
 
     steps:
-      - name: 🛣️ Setup Tailscale
+      - name: 🛣️ Set up Tailscale
         uses: tailscale/github-action@84a3f23bb4d843bcf4da6cf824ec1be473daf4de # v3.2.3
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
