refactor(compose): Decrease the healthcheck interval
The default value is too long that it needs to wait too much.

--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -61,6 +61,7 @@ services:
     image: docker.io/redis:7.2.5-alpine3.19@sha256:8f157725f8eee31e65a8d4765f1f986d76aedc1a0503345dfb63a2b1b5a441ee
     healthcheck:
       test: redis-cli ping || exit 1
+      interval: 5s
     restart: always
 
   backup:
