--- a/misskey/compose.yml
+++ b/misskey/compose.yml
@@ -34,6 +34,7 @@ services:
       - database-backup:/tmp/backup
     healthcheck:
       test: pg_isready -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' || exit 1
+      interval: 5s
     labels:
       docker-volume-backup.exec-label: *misskey_database
       docker-volume-backup.archive-pre: pg_dump -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/misskey.sql
@@ -44,6 +45,7 @@ services:
     image: docker.io/redis:7.2.5-alpine3.19@sha256:8f157725f8eee31e65a8d4765f1f986d76aedc1a0503345dfb63a2b1b5a441ee
     healthcheck:
       test: redis-cli ping || exit 1
+      interval: 5s
     restart: always
 
   backup:
