--- a/paperless/compose.yml
+++ b/paperless/compose.yml
@@ -22,7 +22,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    restart: always
+    restart: unless-stopped
 
   database:
     container_name: &paperless_database paperless_database
@@ -41,7 +41,7 @@ services:
     labels:
       docker-volume-backup.exec-label: *paperless_database
       docker-volume-backup.archive-pre: pg_dump -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/paperless.sql
-    restart: always
+    restart: unless-stopped
 
   redis:
     container_name: paperless_redis
@@ -49,7 +49,7 @@ services:
     healthcheck:
       test: redis-cli ping || exit 1
       interval: 5s
-    restart: always
+    restart: unless-stopped
 
   backup:
     container_name: paperless_backup
@@ -77,7 +77,7 @@ services:
     depends_on:
       database:
         condition: service_healthy
-    restart: always
+    restart: unless-stopped
 
   cloudflare-tunnel:
     container_name: paperless_cloudflare-tunnel
@@ -85,7 +85,7 @@ services:
     command: tunnel --no-autoupdate run
     environment:
       TUNNEL_TOKEN: $TUNNEL_TOKEN
-    restart: always
+    restart: unless-stopped
 
 volumes:
   database:
