--- a/soft-serve/compose.yml
+++ b/soft-serve/compose.yml
@@ -18,7 +18,7 @@ services:
     healthcheck:
       test: wget --spider -q http://localhost:23232/readyz || exit 1
       interval: 5s
-    restart: always
+    restart: unless-stopped
 
   cloudflare-tunnel:
     container_name: soft-serve_cloudflare-tunnel
@@ -26,7 +26,7 @@ services:
     command: tunnel --no-autoupdate run
     environment:
       TUNNEL_TOKEN: $TUNNEL_TOKEN
-    restart: always
+    restart: unless-stopped
 
 volumes:
   soft-serve:
