--- a/timemachine/compose.yml
+++ b/timemachine/compose.yml
@@ -12,4 +12,4 @@ services:
     volumes:
       - $BACKUP_DIR:/opt/$TM_USERNAME
     network_mode: host
-    restart: always
+    restart: unless-stopped
