chore(immich): Upload Immich data to R2 as well
Follow the 3-2-1 backup strategy.

--- a/immich/config/backup/data.env
+++ b/immich/config/backup/data.env
@@ -1,5 +1,5 @@
 BACKUP_FILENAME=immich_data_%Y%m%d.{{ .Extension }}
-AWS_S3_BUCKET_NAME=
+AWS_S3_PATH=$R2_PATH/data
 BACKUP_SOURCES=/backup/data
 BACKUP_ARCHIVE=/archive/data
 EXEC_LABEL=none
