--- a/.github/actions/detect-changed-compose/action.yml
+++ b/.github/actions/detect-changed-compose/action.yml
@@ -15,7 +15,8 @@ runs:
       uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
       with:
         filters: |
-          compose: ["**/compose.yml", "**/config/**"]
+          compose:
+            - added|modified: ["**/compose.yml", "**/config/**"]
         list-files: shell
 
     - name: 📡 Collect compose information
