--- a/misskey/compose.yml
+++ b/misskey/compose.yml
@@ -35,6 +35,7 @@ services:
     healthcheck:
       test: pg_isready -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' || exit 1
       interval: 5s
+      retries: 3
     labels:
       docker-volume-backup.exec-label: *misskey_database
       docker-volume-backup.archive-pre: pg_dump -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/misskey.sql
@@ -46,6 +47,7 @@ services:
     healthcheck:
       test: redis-cli ping || exit 1
       interval: 5s
+      retries: 3
     restart: unless-stopped
 
   backup:
