--- a/speedtest-tracker/compose.yml
+++ b/speedtest-tracker/compose.yml
@@ -19,6 +19,7 @@ services:
     healthcheck:
       test: curl -f http://localhost/api/healthcheck | jq -r .message || exit 1
       interval: 5s
+      retries: 3
     restart: unless-stopped
 
   database:
@@ -35,6 +36,7 @@ services:
     healthcheck:
       test: pg_isready -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' || exit 1
       interval: 5s
+      retries: 3
     labels:
       docker-volume-backup.exec-label: *speedtest-tracker_database
       docker-volume-backup.archive-pre: pg_dump -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/speedtest-tracker.sql
