chore(speedtest-tracker): Use a specific server for speedtest
Prevent using other servers than expected ones.

--- a/speedtest-tracker/compose.yml
+++ b/speedtest-tracker/compose.yml
@@ -12,6 +12,7 @@ services:
       DB_USERNAME: $DB_USERNAME
       DB_PASSWORD: $DB_PASSWORD
       SPEEDTEST_SCHEDULE: 0 * * * *
+      SPEEDTEST_SERVERS: $SPEEDTEST_SERVERS
       DISPLAY_TIMEZONE: JST
     depends_on:
       database:
